--- a/css/styles-9.css
+++ b/css/styles-9.css
@@ -49,8 +49,12 @@ body {
 
 .stopwatch > ul {
     list-style: none;
-    max-height: 95px;
+    max-height: 85px;
     overflow-y: scroll;
+}
+
+.stopwatch > ul::-webkit-scrollbar {
+    background-color: transparent;
 }
 
 .time {
@@ -61,48 +65,87 @@ body {
     display: none;
 }
 
-.uniq {
+#maker.uniq {
+    position: relative;
+    margin: 20vh auto auto;
+    text-transform: uppercase;
+}
+
+#maker.used {
+    display: block;
+    position: absolute;
+    bottom: 60px;
+    right: 60px;
+}
+
+#maker.uniq > input {
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    width: 80px;
+    transform: translate(-50%);
+}
+
+#maker.used > input {
+    position: absolute;
+    max-width: 100%;
+    top: 54px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+#maker.uniq > button {
     width: 300px;
     height: 300px;
-    margin-top: 20vh;
     border: 4px solid #8f979e;
     border-radius: 50%;
     background-color: #3c3f41;
     color: #b7bfc6;
     outline: none;
     font-size: 80px;
-    text-transform: uppercase;
     cursor: pointer;
 }
 
-.uniq:hover {
+#maker.uniq:hover > button {
     border-color: #c0cbd3;
     background-color: #202123;
     color: #cad4db;
 }
 
-.used {
-    display: block;
-    position: absolute;
+#maker.used > button {
     width: 80px;
     height: 80px;
-    bottom: 60px;
-    right: 60px;
     font-size: 23px;
     background-color: #a2a2a2;
     border: 2px solid #4d4d4d;
     border-radius: 50%;
     outline: none;
-    cursor: pointer;
     text-transform: uppercase;
 }
 
-.used:hover {
+#maker.used:hover > button {
     background-color: #dddddd;
     color: #565656;
 }
 
-.used:active {
+#maker.used:active > button {
     background-color: #c7c7c7;
     box-shadow: inset 0 0 0.3em rgba(0, 0, 0, 0.7);
 }
+
+/*
+.uniq,
+.used {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.uniq > button,
+.used > button {
+    background-color: transparent;
+    border: none;
+    color: inherit;
+}*/
